--- a/index.html
+++ b/index.html
@@ -35,7 +35,14 @@
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
         <h4>Basic Page</h4>
-        <p>This index.html page is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content! If you need some help hit up the <a href="http://www.getskeleton.com">Skeleton documentation</a>.</p>
+        <form>
+            <label for="">Title</label>
+            <input type="text" name="title" id="title">
+
+            <label for="">Author</label>
+            <input type="text" name="author" id="author">
+            
+        </form>
       </div>
     </div>
   </div>
