--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 
             <label for="">Author</label>
             <input type="text" name="author" id="author">
+
+            <button>Add new book</button>
             
         </form>
       </div>
