--- a/index.html
+++ b/index.html
@@ -46,11 +46,22 @@
             
         </form>
       </div>
-
-      <div class="two-half column" style="margin-top: 25%">
-        <h4>Basic Page</h4>
-      </div>
     </div>
+    <div class="row">
+        <div class="one-half column" style="margin-top: 25%">
+          <h4>Basic Page</h4>
+          <form>
+              <label for="">Title</label>
+              <input type="text" name="title" id="title">
+  
+              <label for="">Author</label>
+              <input type="text" name="author" id="author">
+              <br>
+              <button>Add new book</button>
+              
+          </form>
+        </div>
+      </div>
   </div>
 
 <!-- End Document
