--- a/index.html
+++ b/index.html
@@ -48,17 +48,8 @@
       </div>
 
       <div class="one-half column" style="margin-top: 25%">
-        <h4>Basic Page</h4>
-        <form>
-            <label for="">Title</label>
-            <input type="text" name="title" id="title">
-
-            <label for="">Author</label>
-            <input type="text" name="author" id="author">
-            <br>
-            <button>Add new book</button>
-            
-        </form>
+        <h4>My library</h4>
+    
       </div>
     </div>
   </div>
