--- a/index.html
+++ b/index.html
@@ -43,12 +43,13 @@
             <label for="">Author</label>
             <input type="text" name="author" id="author">
             <br>
-            <button>Add new book</button>
+
+            <input type="submit" value="Add new book">
             
         </form>
       </div>
 
-      <div class="one-half column" style="margin-top: 25%">
+      <div class="one-half column library" style="margin-top: 25%">
         <h4>My library</h4>
     
       </div>
