--- a/index.html
+++ b/index.html
@@ -49,8 +49,12 @@
         </form>
       </div>
 
-      <div class="one-half column library" style="margin-top: 25%">
+      <div class="one-half column" style="margin-top: 25%">
         <h4>My library</h4>
+
+        <div id="library">
+            
+        </div>
     
       </div>
     </div>
