--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
       </div>
 
       <div class="one-half column" style="margin-top: 25%">
-        <h4>My library</h4>
+        <h4>My librarys</h4>
 
         <div id="library">
-            
+
         </div>
     
       </div>
