--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
 
             <label for="">Author</label>
             <input type="text" name="author" id="author">
+
+            <label for="">Pages</label>
+            <input type="text" name="author" id="author">
+
+            <label for="">Read</label>
+            <input type="checkbox" name="read" id="read">
             <br>
 
             <input type="submit" value="Add new book">
