--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
         <h4>Basic Page</h4>
-        <form onsubmit="return false">
+        <form id="addBookToLibraryForm">
             <label for="">Title</label>
             <input type="text" name="title" id="title">
 
