--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <input type="text" name="author" id="author">
 
             <label for="">Pages</label>
-            <input type="text" name="author" id="author">
+            <input type="number" name="pages" id="pages">
 
             <label for="">Read</label>
             <input type="checkbox" name="read" id="read">
